--- a/style.css
+++ b/style.css
@@ -46,3 +46,15 @@ button {
     border-radius: 10px;
     border: 0;
 }
+.info-section img {
+height: 200px;
+width: 200px;
+}
+.info-section {
+    text-align: center;
+}
+.images {
+display: flex;
+gap: 16px;
+justify-content: center;    
+}
