--- a/style.css
+++ b/style.css
@@ -88,3 +88,27 @@ font-style: normal;
     font-size: 36px;
     font-style: italic;
 }
+.button {
+    display: flex;
+    gap: 200px;
+    background: #3882F6;
+    padding: 32px 0;
+    border-radius: 8px;
+    justify-content: center;
+}
+.signup {
+    border: 2px solid white;
+}
+.signup-section {
+    background: #F9FAF8;
+    padding: 50px 100px;
+}
+.product {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+.action {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
