--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+body {
+    font-family: Roboto, sans-serif;
+}
+
 ul {
     margin: 0;
     padding: 0;
@@ -86,7 +92,7 @@ font-style: normal;
     flex-direction: column;
     color: #1F2937;
     font-size: 36px;
-    font-style: italic;
+    /*font-style: italic;*/
 }
 .button {
     display: flex;
