Add minor finishes

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ button {
     background: #3882F6;
     padding: 8px 32px;
     color: #F9FAF8;
-    font-weight: bold;
+    font-weight: bolder;
     font-size: large;
     border-radius: 10px;
     border: 0;
